mosaic cells (overlapping polygons) are standardized to sum to 1 as dummies.
Also, a bug fix in relative elevations.

--- a/reports/wildlings-NiN.Rmd
+++ b/reports/wildlings-NiN.Rmd
@@ -65,5 +65,8 @@ for (i in localities) {
 
   percell[[i]] <- select(grd, wildlings, everything())
 }
+
+saveRDS(percell, here("output","percell-data.rds"))
+#percell <- readRDS(here("output","percell-data.rds"))
 ```
 
