--- a/reports/wildlings-NiN.Rmd
+++ b/reports/wildlings-NiN.Rmd
@@ -169,7 +169,6 @@ saveRDS(percell, here("output","percell-data.rds"))
 
 ```{r wildlings per cell aggregated}
 percell <- readRDS(here("output","percell-data.rds"))
-plot(percell$`P.sitchensis-lutz`$dale)
 
 percell.agg <- percell
 for (i in seq_along(percell)) {
@@ -185,7 +184,8 @@ for (i in seq_along(percell)) {
 }
 str(percell.agg)
 
-glimpse(percell.agg[["Larix"]])
-summary(percell.agg[["Larix"]])
+for (i in names(percell.agg)) {  
+  hist(percell.agg[[i]][["wildlings"]], xlab = "wildlings", main = i, xlim = c(0,20), breaks = 50)
+}
 ```
 
