--- a/reports/wildlings-NiN.Rmd
+++ b/reports/wildlings-NiN.Rmd
@@ -30,46 +30,46 @@ codes <- unique(codes)
 codes[order(substring(codes, 1, 1), as.numeric(substring(codes, 2)))]
 
 grouping <- tribble(
-  ~code, ~group,
-  "T1", "T1",
-  "T2", "T2",
-  "T3", "T3",
-  "T4", "T4",
-  "T6", "T6",
-  "T13", "T13",
-  "T16", "T16",
-  "T17", "T17",
-  "T18", "T18",
-  "T21", "T21",
-  "T27", "T27",
-  "T29", "T29",
-  "T30", "T30",
-  "T31", "T31",
-  "T32", "T32",
-  "T33", "T33",
-  "T34", "T34",
-  "T35", "disturbed",
-  "T37", "disturbed",
-  "T38", "plantation forest",
-  "T39", "disturbed",
-  "T40", "disturbed",
-  "T41", "cultivated",
-  "T42", "disturbed",
-  "T43", "disturbed",
-  "T44", "cultivated",
-  "T45", "cultivated",
-  "T35.T37.T39.T43", "disturbed",
-  "T35.T37", "disturbed",
-  "V1", "fen",
-  "V2", "swamp",
-  "V3", "bog",
-  "V4", "spring",
-  "V8", "swamp",
-  "V9", "fen",
-  "V10", "fen",
-  "V11", "disturbed",
-  "V12", "disturbed",
-  "V13", "disturbed")
+  ~code, ~group, ~vegheight,
+  "T1", "T1", 0,
+  "T2", "T2", 0.5,
+  "T3", "T3", 0.5,
+  "T4", "T4", 10,
+  "T6", "T6", 0,
+  "T13", "T13", 0,
+  "T16", "T16", 0.5,
+  "T17", "T17", 0,
+  "T18", "T18", 0,
+  "T21", "T21", 0,
+  "T27", "T27", 0,
+  "T29", "T29", 0,
+  "T30", "T30", 10,
+  "T31", "T31", 0.5,
+  "T32", "T32", 0.5,
+  "T33", "T33", 0.5,
+  "T34", "T34", 0.5,
+  "T35", "disturbed", 0, 
+  "T37", "disturbed", 0,
+  "T38", "plantation forest", 10,
+  "T39", "disturbed", 0,
+  "T40", "disturbed", 0,
+  "T41", "cultivated", 0.5,
+  "T42", "disturbed", 0,
+  "T43", "disturbed", 0,
+  "T44", "cultivated", 0.5,
+  "T45", "cultivated", 0.5,
+  "T35.T37.T39.T43", "disturbed", 0,
+  "T35.T37", "disturbed", 0,
+  "V1", "fen", 0,
+  "V2", "swamp", 10,
+  "V3", "bog", 0,
+  "V4", "spring", 0,
+  "V8", "swamp", 10,
+  "V9", "fen", 0,
+  "V10", "fen", 0,
+  "V11", "disturbed", 0,
+  "V12", "disturbed", 0,
+  "V13", "disturbed", 0) 
 
 for (i in ninfiles) {
   shp <- st_read(here("data","qc",i), quiet = TRUE) %>% 
