--- a/reports/wildlings-NiN.Rmd
+++ b/reports/wildlings-NiN.Rmd
@@ -80,7 +80,7 @@ for (i in ninfiles) {
 }
 ```
 
-```{r check topology, eval=FALSE}
+```{r check topology, include=FALSE, eval=FALSE}
 ninfiles <- list.files(here("data","qc"), pattern = "nin.shp", recursive = TRUE)
 for (i in ninfiles) {
   shp <- st_read(here("data","qc",i), quiet = TRUE)
